Adicionada screenshot do projeto

--- a/index.html
+++ b/index.html
@@ -48,10 +48,13 @@
             <input class="btn voltar" type="submit" value="voltar">
         </section>
 
-        <div class="attribution">
-            Challenge by <a href="https://www.frontendmentor.io/home/my-challenges?tab=completed" target="_blank">Frontend Mentor</a>.
-            Coded by <a href="https://www.linkedin.com/in/victorpariziofrontend" target="_blank">Victor Parizio</a>.
-        </div>
+        <footer>
+            <div class="attribution">
+                Challenge by
+                <a href="https://www.frontendmentor.io/profile/VictorParizio" target="_blank">Frontend Mentor</a>.
+                Coded by <a href="https://www.linkedin.com/in/victorpariziobackend/" target="_blank">Victor Parizio</a>.
+            </div>
+        </footer>
     </main>
 
     <script src="src/js/index.js"></script>
